Fix styling on mobile chrome

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 .content {
   display: flex;
   flex: 1;
-  /* padding: 20px; */
   overflow: auto; /* This is important for layout to work */
+  padding-bottom: 112px;
 }
 
 .bottom-navigation {
@@ -16,51 +16,11 @@
   flex-shrink: 0;
 }
 
-/* NOT USED - old solution */
-.tabs {
-  display: flex;
-  /* justify-content: space-around; */
-  background-color: #333;
-  /* padding: 10px; */
+.bottom-navigation-mobile {
   position: fixed;
+  left: 0;
+  right: 0;
   bottom: 0;
-  width: 100%;
-}
-
-.tab-link {
-  display: flex;
-  flex: 1;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-
-  color: white;
-  text-decoration: none;
-  height: 70px;
-  font-size: 16px;
-  /* background-color: 'cyan'; */
-}
-
-.tab-link:hover {
-  background-color: #555;
-}
-
-.tab-link:focus {
-  outline: none;
-  background-color: #444;
-}
-
-.tab-link.active {
-  background-color: #444;
-  /* font-weight: bold; */
-}
-
-.tabIcon {
-  /* flex: 1; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  font-size: x-large
+  height: 56px;
+  z-index: 777;
 }
